--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
@@ -32,7 +32,7 @@
             android:drawablePadding="5dp"
             android:drawableStart="@drawable/ic_edit_text_start_drawable"
             android:hint="@string/name"
-            android:inputType="textPersonName"
+            android:inputType="textPersonName|textCapWords"
             android:padding="13dp"
             app:layout_constraintTop_toBottomOf="@+id/tvEnterName"
             />
