--- a/JugnooNewDriver/hippo/src/main/res/layout/fugu_support_fragment.xml
+++ b/JugnooNewDriver/hippo/src/main/res/layout/fugu_support_fragment.xml
@@ -22,6 +22,7 @@
         android:focusable="true"
         android:gravity="center"
         android:text="@string/fugu_powered_by"
+        android:visibility="gone"
         android:textColor="@color/fugu_text_color_primary"
         android:textSize="@dimen/fugu_text_size_intermediate" />
 
