--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
@@ -64,9 +64,9 @@
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/splash_driver_logo"
+            android:layout_width="@dimen/ic_splash_logo_width"
+            android:layout_height="@dimen/ic_splash_logo_height"
+            android:src="@drawable/ic_splash_logo_drawable"
             android:transitionName="logoTransition"
             app:layout_constraintBottom_toTopOf="@+id/tvLabel"
             app:layout_constraintEnd_toEndOf="parent"
