--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_splash.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_splash.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:fitsSystemWindows="true" android:background="@android:color/white"
     android:layout_height="match_parent">
 
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/splash_driver_logo"
+        android:layout_width="@dimen/ic_splash_logo_width"
+        android:layout_height="@dimen/ic_splash_logo_height"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:transitionName="logoTransition"
+        app:layout_constraintVertical_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
