--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/styles.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/styles.xml
@@ -75,7 +75,7 @@
         <item name="android:tag">mwar</item>
     </style>
 
-    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="SplashTheme" parent="AppBaseTheme">
         <item name="android:fitsSystemWindows">false</item>
         <item name="android:windowBackground">@drawable/app_startup_bg</item>
     </style>
