--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_vehicle.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_vehicle.xml
@@ -14,15 +14,28 @@
         android:background="@color/white"
         />
 
+    <TextView
+        android:id="@+id/tvName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/ivVehicle"
+        app:layout_constraintStart_toEndOf="@+id/ivVehicle"
+        app:layout_constraintEnd_toStartOf="@+id/ivVehicle"
+        android:layout_marginTop="4dp"
+        android:textColor="@color/text_color"
+        android:textSize="12sp"
+        />
+
+
     <ImageView
         android:id="@+id/ivVehicleTick"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:src="@drawable/delivery_green_tick"
-        app:layout_constraintTop_toBottomOf="@+id/ivVehicle"
+        app:layout_constraintTop_toBottomOf="@+id/tvName"
         app:layout_constraintStart_toEndOf="@+id/ivVehicle"
         app:layout_constraintEnd_toStartOf="@+id/ivVehicle"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
         />
 
 </android.support.constraint.ConstraintLayout>
