live cabs added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -116,7 +116,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_above="@+id/textViewDriver"
-                android:background="@drawable/ic_splash_logo_drawable"
+                android:src="@drawable/ic_splash_logo_drawable"
                 android:tag="mwar"
                 android:visibility="visible" />
 
