--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -31,7 +31,7 @@
         android:padding="4px">
 
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/llBeforeRide"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -48,11 +48,10 @@
                 android:text="@string/before_ride"
                 android:textColor="@color/new_orange"
                 android:textSize="40px"
-                android:layout_marginStart="30px"
 
                 />
 
-        </RelativeLayout>
+        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
