--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_two_buttons.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_two_buttons.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:id="@+id/rv"
              xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="640px"
-             android:layout_marginStart="40px"
-             android:layout_height="1134px"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
              android:orientation="vertical"
              android:splitMotionEvents="false"
     >
@@ -13,7 +12,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="40px"
+        android:layout_margin="70px"
         android:background="@drawable/dialog_background_color"
         android:splitMotionEvents="false"
         android:layout_centerInParent="true"
@@ -65,44 +64,31 @@
 
                 />
 
-            <RelativeLayout
-                android:layout_width="fill_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginTop="40px"
-                android:layout_marginStart="15px"
-                android:layout_marginEnd="15px"
-                android:layout_marginBottom="25px"
-                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginEnd="14dp"
+                android:layout_marginBottom="15dp"
                 android:tag="@string/dont_touch_me"
                 android:splitMotionEvents="false"
+                android:layout_gravity="center_horizontal"
                 >
 
                 <product.clicklabs.jugnoo.driver.utils.CustomButtonView
-                    android:id="@+id/btnOk"
-                    android:layout_width="220px"
-                    android:layout_height="83px"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginStart="280px"
-                    android:background="@drawable/new_orange_btn_selector_rounded"
-                    android:text="@string/ok"
-                    android:textColor="@drawable/white_color_selector"
-                    android:textSize="@dimen/button_text_size"
+                    android:id="@+id/btnCancel"
+                    style="@style/DialogButtonGrey"
+                    android:text="@string/cancel"
                     />
 
                 <product.clicklabs.jugnoo.driver.utils.CustomButtonView
-                    android:id="@+id/btnCancel"
-                    android:layout_width="220px"
-                    android:layout_height="83px"
-                    android:layout_marginStart="28px"
-                    android:padding="2px"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@drawable/new_menu_black_btn_selector_rounded"
-                    android:text="@string/cancel"
-                    android:textColor="@drawable/white_color_selector"
-                    android:textSize="@dimen/button_text_size"
+                    android:id="@+id/btnOk"
+                    style="@style/DialogButtonOrange"
+                    android:text="@string/ok"
+                    android:layout_marginStart="20dp"
                     />
-            </RelativeLayout>
+            </LinearLayout>
 
 
         </LinearLayout>
