--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_delivery_return_reason.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_delivery_return_reason.xml
@@ -52,10 +52,10 @@
                 android:fadeScrollbars="true"
                 android:scrollbars="vertical"/>
 
-            <RelativeLayout
-                android:layout_width="fill_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="40px"
                 android:layout_marginStart="45px"
                 android:layout_marginEnd="45px"
@@ -65,25 +65,17 @@
 
                 <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                     android:id="@+id/btnCancel"
-                    android:layout_width="260px"
-                    android:layout_height="70px"
+                    style="@style/DialogButtonGrey"
                     android:text="@string/cancel"
-                    android:background="@drawable/new_menu_black_btn_selector_rounded"
-                    android:textColor="@drawable/white_color_selector"
-                    android:textSize="@dimen/button_text_size"
                     />
 
                 <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                     android:id="@+id/btnSubmit"
-                    android:layout_width="260px"
-                    android:layout_height="70px"
-                    android:background="@drawable/new_orange_btn_selector_rounded"
+                    style="@style/DialogButtonOrange"
                     android:text="@string/submit"
-                    android:textColor="@drawable/white_color_selector"
-                    android:textSize="@dimen/button_text_size"
-                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="20dp"
                     />
-            </RelativeLayout>
+            </LinearLayout>
 
 
         </LinearLayout>
