--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_mark_delivery.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_mark_delivery.xml
@@ -180,22 +180,14 @@
 
                 <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                     android:id="@+id/btnCancel"
-                    android:layout_width="260px"
-                    android:layout_height="70px"
-                    android:background="@drawable/new_menu_black_btn_selector_rounded"
+                    style="@style/DialogButtonGrey"
                     android:text="@string/cancel"
-                    android:textColor="@drawable/white_color_selector"
-                    android:textSize="@dimen/button_text_size"
                     />
 
                 <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                     android:id="@+id/btnOk"
-                    android:layout_width="260px"
-                    android:layout_height="70px"
-                    android:background="@drawable/new_orange_btn_selector_rounded"
+                    style="@style/DialogButtonOrange"
                     android:text="@string/ok"
-                    android:textColor="@drawable/white_color_selector"
-                    android:textSize="@dimen/button_text_size"
                     android:layout_alignParentEnd="true"
                     />
             </RelativeLayout>
