--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_mark_delivery_return.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_mark_delivery_return.xml
@@ -283,26 +283,19 @@
                 android:layout_marginEnd="45px"
                 android:layout_marginBottom="25px"
                 android:splitMotionEvents="false"
+                android:layout_gravity="center_horizontal"
                 >
 
                 <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                     android:id="@+id/btnCancel"
-                    android:layout_width="260px"
-                    android:layout_height="70px"
-                    android:background="@drawable/new_menu_black_btn_selector_rounded"
+                    style="@style/DialogButtonGrey"
                     android:text="@string/cancel"
-                    android:textColor="@drawable/white_color_selector"
-                    android:textSize="@dimen/button_text_size"
                     />
 
                 <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                     android:id="@+id/btnOk"
-                    android:layout_width="260px"
-                    android:layout_height="70px"
-                    android:background="@drawable/new_orange_btn_selector_rounded"
+                    style="@style/DialogButtonOrange"
                     android:text="@string/ok"
-                    android:textColor="@drawable/white_color_selector"
-                    android:textSize="@dimen/button_text_size"
                     android:layout_alignParentEnd="true"
                     />
             </RelativeLayout>
