--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -279,6 +279,7 @@
                 android:text="@string/looking_for_customer_app"
                 android:textColor="@color/white"
                 android:layout_marginTop="32px"
+                android:visibility="invisible"
                 android:textSize="36px"/>
 
             <Button
