--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_share_enter_number.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_share_enter_number.xml
@@ -92,8 +92,8 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_marginBottom="15dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:layout_gravity="center_horizontal"
                 android:tag="@string/dont_touch_me"
                 android:orientation="horizontal" >
