--- a/JugnooNewDriver/jugnooNewDriver/src/sindbad/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/sindbad/res/values/values-wl.xml
@@ -21,7 +21,7 @@
     <string name="fugu_app_key">vdfvvbdfgb786347823vhjdvwfjcvj</string>
     <string name="fugu_app_key_test">kenwfdhwoiujGSDIUUHU82E8HD98</string>
     <string name="images_path">Jugnoo Driver/Jugnoo Pictures</string>
-    <string name="file_provider">product.clicklabs.jugnoo.white.driver.provider</string>
+    <string name="file_provider">product.clicklabs.sindbad.white.driver.provider</string>
 
 
     <!--App Level Constants-->
