--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
-                android:text=""
+                android:text="+1"
                 android:hint="@string/code"
                 android:textColor="@color/text_color"
                 android:textSize="17sp"
@@ -79,6 +79,7 @@
             android:id="@+id/textViewLoginRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:text="@string/register_text"
             android:layout_marginTop="12px"
             android:textSize="26px"
