--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_otp_confrim.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_otp_confrim.xml
@@ -245,6 +245,7 @@
                 android:layout_width="120px"
                 android:layout_height="120px"
                 android:layout_marginTop="20px"
+                android:visibility="invisible"
                 android:background="@drawable/ic_missed_call" />
 
         </LinearLayout>
