--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -128,6 +128,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="20px"
+                android:visibility="gone"
                 android:text="@string/driver_app"
                 android:textColor="@color/white"
                 android:textSize="32px"/>
