--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -164,6 +164,7 @@
     <color name="case_deducted">#ff6c6c</color>
 
     <color name="dialog_border_color">#AA7E7D78</color>
+    <color name="instataxi_yellow">#F8CE00</color>
   <!--  <color name="gradient_orange_v2">#ff8162</color>
     <color name="gradient_yellow_v2">#f8b542</color>-->
 
