--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -4,84 +4,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="720px"
     android:layout_height="1134px"
-    android:animateLayoutChanges="true"
-    android:background="@drawable/bg_on_boarding_drawable"
+
+    android:background="@color/red"
     android:baselineAligned="false"
     android:orientation="vertical"
     android:splitMotionEvents="false">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="105px">
-
-        <Button
-            android:id="@+id/backBtn"
-            android:layout_width="80px"
-            android:layout_height="80px"
-            android:layout_centerVertical="true"
-            android:background="@drawable/back_btn_selector" android:rotationY="@integer/locale_mirror_flip"
-            android:textColor="@drawable/blue_alpha_color_selector"
-            android:textSize="@dimen/button_text_size"/>
-
-
-        <TextView
-            android:id="@+id/textViewRegDriver"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_marginStart="162px"
-            android:layout_centerVertical="true"
-            android:textSize="46px"
-            android:visibility="gone"
-            android:text="@string/register_as_driver"/>
-
-        <RelativeLayout
-            android:id="@+id/selectLanguageLl"
-            android:layout_width="320px"
-            android:layout_height="80px"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="360px"
-            android:layout_marginEnd="5px"
-            android:layout_marginTop="25px"
-            android:background="@drawable/background_translucent_white_rounded_orange_bordered"
-            android:visibility="@integer/show_language_control">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="6px"
-                android:background="@drawable/language_icon"
-                android:visibility="gone"/>
-
-            <ImageView
-                android:layout_width="2px"
-                android:layout_height="match_parent"
-                android:layout_marginStart="6px"
-                android:background="@color/new_orange"
-                android:visibility="gone"/>
-
-            <Spinner
-                android:id="@+id/language_spinner"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerVertical="true"
-                android:background="@null"
-                android:popupBackground="@drawable/background_white_rounded_orange_bordered"
-                android:textAlignment="center"
-                android:visibility="visible" />
-
-            <ImageView
-                android:layout_width="30px"
-                android:layout_height="22px"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="15px"
-                android:background="@drawable/white_arrow_down"/>
-
-        </RelativeLayout>
-
-    </RelativeLayout>
 
     <ImageView
         android:id="@+id/viewInitJugnoo"
@@ -95,34 +23,41 @@
         android:layout_height="200px"
         android:visibility="gone"/>
 
+    <ImageView
+        android:id="@+id/viewInitLS"
+        android:layout_width="match_parent"
+        android:layout_height="300px"
+        android:visibility="gone"/>
+
 
     <RelativeLayout
         android:id="@+id/relativeLayoutJugnooLogo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50px"
+        android:visibility="gone"
         android:animateLayoutChanges="true"
         android:splitMotionEvents="false">
 
 
         <RelativeLayout
             android:layout_centerHorizontal="true"
-            android:layout_width="420px"
-            android:layout_height="420px">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/imageViewJugnooLogo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="360dp"
+                android:scaleType="fitXY"
                 android:layout_centerHorizontal="true"
                 android:layout_above="@+id/textViewDriver"
                 android:src="@drawable/ic_splash_logo_drawable"
-                android:tag="mwar"
+                android:tag="@string/dont_touch_me"
                 android:visibility="visible" />
 
             <TextView
                 android:id="@+id/textViewDriver"
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
@@ -138,6 +73,7 @@
         <RelativeLayout
             android:id="@+id/jugnooTextImgRl"
             android:layout_width="290px"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="190px"
@@ -157,11 +93,85 @@
                 />
 
         </RelativeLayout>
+        '
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="105px">
+
+            <Button
+                android:id="@+id/backBtn"
+                android:layout_width="80px"
+                android:layout_height="80px"
+                android:layout_centerVertical="true"
+                android:background="@drawable/back_btn_selector" android:rotationY="@integer/locale_mirror_flip"
+                android:textColor="@drawable/blue_alpha_color_selector"
+                android:textSize="@dimen/button_text_size"/>
+
+
+            <TextView
+                android:id="@+id/textViewRegDriver"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:layout_marginStart="162px"
+                android:layout_centerVertical="true"
+                android:textSize="46px"
+                android:visibility="gone"
+                android:text="@string/register_as_driver"/>
+
+            <RelativeLayout
+                android:id="@+id/selectLanguageLl"
+                android:layout_width="320px"
+                android:layout_height="80px"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="360px"
+                android:layout_marginEnd="5px"
+                android:layout_marginTop="25px"
+                android:background="@drawable/background_translucent_white_rounded_orange_bordered"
+                android:visibility="@integer/show_language_control">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="6px"
+                    android:background="@drawable/language_icon"
+                    android:visibility="gone"/>
+
+                <ImageView
+                    android:layout_width="2px"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="6px"
+                    android:background="@color/new_orange"
+                    android:visibility="gone"/>
+
+                <Spinner
+                    android:id="@+id/language_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:background="@null"
+                    android:popupBackground="@drawable/background_white_rounded_orange_bordered"
+                    android:textAlignment="center"
+                    android:visibility="visible" />
+
+                <ImageView
+                    android:layout_width="30px"
+                    android:layout_height="22px"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="15px"
+                    android:background="@drawable/white_arrow_down"/>
+
+            </RelativeLayout>
+
+        </RelativeLayout>
 
 
 
 
-        <ProgressBar
+
+      <ProgressBar
         android:id="@+id/progressBar1"
         android:layout_width="100px"
         android:layout_height="100px"
@@ -174,20 +184,17 @@
     </RelativeLayout>
 
 
-    <ImageView
-        android:id="@+id/viewInitLS"
-        android:layout_width="match_parent"
-        android:layout_height="300px"
-        android:visibility="gone"/>
+
 
 
     <RelativeLayout
         android:id="@+id/relativeLayoutLS"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="256px"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/white"
         android:animateLayoutChanges="true"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <LinearLayout
             android:id="@+id/linearLayoutLoginSignupButtons"
@@ -210,7 +217,7 @@
                     android:id="@+id/buttonLogin"
                     android:layout_width="273px"
                     android:layout_height="100px"
-                    android:layout_marginTop="32px"
+                    android:layout_marginTop="80px"
                     android:background="@drawable/bg_button_selector"
                     android:text="@string/login"
                     android:textAllCaps="true"
@@ -239,7 +246,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="54px"
                 android:layout_marginTop="32px"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:gravity="center">
 
                 <ImageView
