--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
@@ -3,7 +3,11 @@
               android:orientation="vertical"
               android:id="@+id/linearLayoutLogin"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+             android:layout_weight="1"
+    android:visibility="gone"
+    android:background="@color/white"
+    android:gravity="center"
+              android:layout_height="0dp">
 
 
     <LinearLayout
