--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
@@ -18,6 +18,7 @@
         android:layout_marginStart="30px"
         android:layout_marginEnd="30px"
         android:layout_marginTop="20px"
+        android:layout_marginBottom="20px"
         android:orientation="vertical"
         android:visibility="visible">
 
