feat_onboarding_merge: some ttride related fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -75,7 +75,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_toStartOf="@+id/arrow"
-                        android:text="Rs. NA"
+                        android:text="NA"
                         android:textColor="@color/white"
                         android:textSize="45px" />
 
