--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/new_orange_btn_pressed_rounded.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/new_orange_btn_pressed_rounded.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle" >
 
-    <solid android:color="@color/new_orange_pressed"/>
+    <solid android:color="@color/red_v2_fadded"/>
     <corners android:radius="5dp"/>
 
 </shape>
