--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/styles.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/styles.xml
@@ -56,8 +56,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:minWidth">116dp</item>
         <item name="android:minHeight">42dp</item>
-        <item name="android:background">@drawable/button_white_theme_border</item>
-        <item name="android:textColor">@color/theme_color</item>
+        <item name="android:background">@drawable/orange_btn_selector</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">17sp</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:tag">@string/dont_touch_me</item>
@@ -69,8 +69,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:minWidth">116dp</item>
         <item name="android:minHeight">42dp</item>
-        <item name="android:background">@drawable/button_white_grey_border</item>
-        <item name="android:textColor">@color/grey_dark_button</item>
+        <item name="android:background">@drawable/menu_black_btn_selector</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">17sp</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:tag">@string/dont_touch_me</item>
