--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -442,7 +442,7 @@
                         <TextView
                             android:id="@+id/textViewShowDistance"
                             android:layout_width="wrap_content"
-                            android:layout_height="19dp"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_marginStart="100px"
                             android:layout_marginEnd="25px"
