--- a/JugnooNewDriver/jugnooNewDriver/src/jingos/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/jingos/res/values/values-wl.xml
@@ -66,7 +66,7 @@
     <integer name="show_language_control">@integer/view_visible</integer>
     <integer name="show_call_in_otp">@integer/view_visible</integer>
 
-
+    <bool name="use_fugu_key_hardcode">true</bool>
 
 
 </resources>
