--- a/JugnooNewDriver/jugnooNewDriver/src/ttrides/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/ttrides/res/values/values-wl.xml
@@ -18,7 +18,7 @@
     <!--White Label Key-->
     <string name="white_label_key">83ebe9d9d65fdac16460da388822bc38</string>
 
-    <string name="fugu_app_key">vdfvvbdfgb786347823vhjdvwfjcvj</string>
+    <string name="fugu_app_key">acd1fc4c36da23e421c9e357785f4d4a</string>
     <string name="fugu_app_key_test">kenwfdhwoiujGSDIUUHU82E8HD98</string>
     <string name="images_path">TT Rides Share Driver/TT Rides Share Pictures</string>
     <string name="file_provider">production.ttridesshare.driver.driver.provider</string>
@@ -70,6 +70,7 @@
     <integer name="show_call_in_otp">@integer/view_visible</integer>
 
     <integer name="driver_logout_enabled">1</integer>
+    <bool name="use_fugu_key_hardcode">true</bool>
 
 
 </resources>
